--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p>Adobe Illustrator</p>
         </div>
         <div class="recent-work-image">
-            <img src="../images/ex2.png" alt="desenho de gato no illustrator">
+            <img src="/images/ex2.png" alt="desenho de gato no illustrator">
         </div>
     </div>
 </section>
