--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             </div>
         <div class="recent-work-image">
-            <img src="images/exe1.jpg" alt="exemplo site portifólio">
+            <img src="Images/exe1.jpg" alt="exemplo site portifólio">
         </div>
     </div>
 
@@ -59,7 +59,7 @@
             <p>Adobe Illustrator</p>
         </div>
         <div class="recent-work-image">
-            <img src="/images/ex2.png" alt="desenho de gato no illustrator">
+            <img src="Images/ex2.png" alt="desenho de gato no illustrator">
         </div>
     </div>
 </section>
