--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </section>
 
 <section>
-    <h3 class="recent-work-title" data-aos="zoom-in" data-aos-delay="0" data-aos-duration="800">Trabalhos recentes</h3>
+    <h3 class="recent-work-title">Trabalhos recentes</h3>
     <hr>
     <div class="recent-work">
         <div class="recent-work-info move-right">
